[tool.poetry]
name = "bot-vpn"
version = "0.1.0"
description = ""
authors = ["Timur Kerimov <tim-online@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.10"
motor = "^3.5.1"
YooMoney = "0.1.0"
cachetools = "5.3.3"
betterlogging = "^1.0.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
